--- a/Core/templates/shared.html
+++ b/Core/templates/shared.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             font-family: Arial, sans-serif;
-            background-color: {{ user.userprofile.background_color }};
+            background-color: {{ user.background_color }};
         }
 
         /* Centraliza todo o conteúdo */
@@ -28,7 +28,7 @@
             font-size: 3rem;
             font-weight: bold;
             margin-top: 20px;
-            color: {{ user_profile.font_color }};
+            color: {{ user.font_color }};
         }
 
         /* Estiliza o título */
@@ -39,15 +39,15 @@
     </style>
 </head>
 <body>
-    <div class="container text-center mt-5">
+    <div class="container-fluid text-center mt-5 content">
+        <h1><span style="color: {{ user.font_color }};">{{user.titulo}}</span></h1>
         <div id="counter" class="counter" style="color: {{ user.userprofile.font_color }};">
-           
         </div>
     </div>
 
     <script>
         // Data do evento
-        const eventDate = new Date("2024-12-31T00:00:00").getTime();
+        const eventDate = new Date("{{user.data|date:'Y-m-d\\TH:i:s'}}").getTime();
 
         // Atualiza o contador a cada segundo
         const countdown = setInterval(() => {
