--- a/templates/base.html
+++ b/templates/base.html
@@ -30,44 +30,23 @@
         {% block 'title' %}
         {% endblock %}
 </title>
-<nav class="navbar navbar-expand-lg navbar-color" style="color:var(--azul-celeste)">
-  <a class="navbar-brand" href="#">
-    <img src="/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"><img width="48" height="48" src="https://img.icons8.com/fluency/48/menu--v1.png" alt="menu--v1" /></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                  Categorias
-              </a>
-              <div class="dropdown-menu">
-
-                  <a class="dropdown-item" href="#">Categoria <span class="badge badge-danger">categoria</span></a>
-
-              </div>
-          </li>
-
-          <li class="nav-item">
-              <a class="nav-link" href="#">Sobre Nós</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Política de Privacidade</a>
-          </li>
-      </ul>
-  </div>
-</nav>
-  </head>
-  <body>
-
+  <body class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Meu Site</a>
+      <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+              {% if user.is_authenticated %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'Core:logout' %}">Logout</a>
+                  </li>
+              {% else %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'Core:login' %}">Login</a>
+                  </li>
+              {% endif %}
+          </ul>
+      </div>
+  </nav>
     {% block 'body' %}
 	{% endblock %}
 
@@ -232,4 +211,3 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   </body>
-</html>
