pagina de pagamento

--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -186,14 +186,14 @@
         <div class="col-md-3">
             <div class="card">
                 <h5 class="card-title">Passo 1: Crie seu Usuario</h5>
-                <p class="card-text">Apos criar o seu usuario e Pagar, Escolha uma data e o título do seu evento. Seu contador começará a contagem automaticamente.</p>
+                <p class="card-text">Apos Pagar e criar o seu usuario, Escolha uma data e o título do seu evento. Seu contador começará a contagem automaticamente.</p>
             </div>
         </div>
         <!-- Card 2 -->
         <div class="col-md-3">
             <div class="card">
                 <h5 class="card-title">Passo 2: Personalize seu contador</h5>
-                <p class="card-text">Escolha as cores, fonte e a Foto que deseja para o contador. Torne seu evento único e visualmente agradável.</p>
+                <p class="card-text">Escolha as cores e Foto que deseja para o contador. Torne seu evento único e visualmente agradável.</p>
             </div>
         </div>
         <!-- Card 3 -->
@@ -208,7 +208,7 @@
 
 <!-- Seção do botão de compra -->
 <div class="text-center my-5">
-    <a href="/compra" class="btn-buy">Compre Agora</a>
+    <a href="{% url 'Core:checkout' %}" class="btn-buy">Compre Agora</a>
 </div>
 
 <script>
