--- a/Core/templates/profile.html
+++ b/Core/templates/profile.html
@@ -2,9 +2,9 @@
 {% block 'body' %}
 
     <div class="justify-content-center align-items-center" style="display: grid; margin-top: 15px;">
-        <div class="card text-center" style="width: 20rem; height: 23rem;">
+        <div class="card text-center" style="width: 50rem; height: 25rem;">
         <h1>Personalize!</h1>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Salvar</button>
@@ -12,6 +12,11 @@
         </form>
     </div>
         <div class="container-fluid text-center mt-5 content">
+            {% if request.user.userprofile.foto %}
+            <div>
+                <img src="{{request.user.userprofile.foto.url}}" alt="" sizes="" srcset="">
+            </div>
+            {% endif%}
             <h1><span style="color: {{ request.user.userprofile.font_color }};">{{request.user.userprofile.titulo}}</h1>
             <div id="counter" class="counter" style="color: {{ request.user.userprofile.font_color }};">
             </div>
