--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,8 @@
 </title>
   </head>
   <body class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Countdown</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">EventTime</a>
       <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
               {% if user.is_authenticated %}
@@ -55,7 +55,7 @@
 	{% endblock %}
 
   <!-- Footer -->
-<footer class="bg-body-tertiary text-center">
+<footer class="bg-body-tertiary text-center navbar-dark bg-dark">
   <!-- Grid container -->
   <div class="container p-4">
     <!-- Section: Social media -->
@@ -76,20 +76,18 @@
     <!-- Section: Form -->
 
     <!-- Section: Text -->
-    <section class="mb-4">
+    <section class="mb-4" style="color: aliceblue;">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-        repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam eum
-        harum corrupti dicta, aliquam sequi voluptate quas.
+        Crie contagens regressivas personalizadas para momentos especiais. Adicione sua foto, escolha cores, e compartilhe a emoção de cada segundo que se aproxima!
       </p>
     <!-- Section: Links -->
   </div>
   <!-- Grid container -->
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color:var(--azul-celeste);">
-    © 2020 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="text-center p-3" style="color: aliceblue;">
+    © 2024 Copyright:
+    <a class="text-reset fw-bold" href="https://eventtime.com.br">eventtime.com.br</a>
   </div>
   <!-- Copyright -->
 </footer>
