--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block 'head' %}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
 <style>
     .hero {
       background-color: white;
       color: rgb(16, 16, 16);
       padding: 100px 0;
       text-align: center;
-      font-family: fantasy;
+      font-family: 'Roboto';
   }
 
   .hero h1 {
@@ -33,6 +37,7 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border: none;
       border-radius: 10px;
+      font-family: 'Roboto';
   }
 
           /* Estilo da sessão de entrada e mockup */
@@ -41,7 +46,7 @@
       justify-content: space-around;
       align-items: center;
       padding: 30px;
-      font-family: fantasy;
+     
   }
 
   /* Mockup do smartphone */
