validacao de erro cadastro e login

--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -182,6 +182,9 @@
             <div class="card">
                 <h5 class="card-title">Passo 1: Crie seu Usuario</h5>
                 <p class="card-text">Apos Pagar e criar o seu usuario, Escolha uma data e o título do seu evento. Seu contador começará a contagem automaticamente.</p>
+                <div class="text-center">
+                <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/add-user-male.png" alt="add-user-male"/>
+            </div>
             </div>
         </div>
         <!-- Card 2 -->
@@ -189,6 +192,9 @@
             <div class="card">
                 <h5 class="card-title">Passo 2: Personalize seu contador</h5>
                 <p class="card-text">Escolha as cores e Foto que deseja para o contador. Torne seu evento único e visualmente agradável.</p>
+                <div class="text-center">
+                    <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/hourglass--v1.png" alt="hourglass--v1"/>
+                </div>
             </div>
         </div>
         <!-- Card 3 -->
@@ -196,6 +202,9 @@
             <div class="card">
                 <h5 class="card-title">Passo 3: Compartilhe com seus amigos</h5>
                 <p class="card-text">Após configurar seu contador, compartilhe o link com amigos e familiares para que todos possam acompanhar o evento.</p>
+            <div class="text-center">
+                <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/forward-arrow.png" alt="forward-arrow"/>
+            </div>
             </div>
         </div>
     </div>
