--- a/Core/templates/login.html
+++ b/Core/templates/login.html
@@ -1,8 +1,19 @@
 {% extends 'base.html' %}
 {% block 'body' %}
 <div class="justify-content-center align-items-center" style="display: grid; margin-top: 15px;">
-    <div class="card text-center" style="width: 25rem; height: 13rem;">
+    <div class="card text-center" style="width: 25rem;">
         <h2>Entrar</h2>
+        {% if form.errors %}
+        <div class="alert alert-danger">
+            
+                {% for field, errors in form.errors.items %}
+                    {% for error in errors %}
+                        {{ error }}
+                    {% endfor %}
+                {% endfor %}
+            
+        </div>
+        {% endif %}
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -15,5 +26,12 @@
             </div>
             <button type="submit" class="btn btn-primary">Entrar</button>
         </form>
-    </div></div>
+    </div>
+</div>
+<style>
+
+    .card{
+        margin-bottom: 25vh;
+    }
+</style>
 {% endblock %}
