--- a/Core/templates/register.html
+++ b/Core/templates/register.html
@@ -3,8 +3,19 @@
 {% block 'body' %}
 
 <div class="justify-content-center align-items-center" style="display: grid; margin-top: 15px;">
-        <div class="card text-center" style="width: 25rem; height: 20rem;">
+        <div class="card text-center" style="width: 25rem;">
         <h2>Registrar Conta</h2>
+        {% if form.errors %}
+        <div class="alert alert-danger">
+            
+                {% for field, errors in form.errors.items %}
+                    {% for error in errors %}
+                        {{ error }}
+                    {% endfor %}
+                {% endfor %}
+            
+        </div>
+        {% endif %}
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -27,4 +38,11 @@
         </form>
     </div>
 </div>
+
+<style>
+
+    .card{
+        margin-bottom: 25vh;
+    }
+</style>
 {% endblock %}
