falta corrigir o acesso ao email

--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -214,7 +214,7 @@
 
 <!-- Seção do botão de compra -->
 <div class="text-center my-5">
-    <a href="{% url 'Core:checkout' %}" class="btn btn-success">Compre Agora</a>
+    <a href="{% url 'checkout' %}" class="btn btn-success">Compre Agora</a>
 </div>
 
 <script>
