--- a/templates/base.html
+++ b/templates/base.html
@@ -40,12 +40,15 @@
       <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
               {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'perfil' %}">Evento</a>
+            </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="{% url 'Core:logout' %}">Logout</a>
+                      <a class="nav-link" href="{% url 'logout' %}">Sair</a>
                   </li>
               {% else %}
                   <li class="nav-item">
-                      <a class="nav-link" href="{% url 'Core:login' %}">Login</a>
+                      <a class="nav-link" href="{% url 'login' %}">Login</a>
                   </li>
               {% endif %}
           </ul>
