--- a/Core/templates/emails/password_reset_complete.html
+++ b/Core/templates/emails/password_reset_complete.html
@@ -11,7 +11,7 @@
 <br>
 <h3>Sua senha foi resetada com sucesso</h3>
 <br>
-<a href="{% url 'Core:login' %}">CLIQUE AQUI</a> para acessar sua conta.
+<a href="{% url 'login' %}">CLIQUE AQUI</a> para acessar sua conta.
 <br>
 </div>
 {% endblock %}
