--- a/Core/templates/emails/password_reset.html
+++ b/Core/templates/emails/password_reset.html
@@ -9,7 +9,7 @@
 {% block 'body' %}
 <div class="box text-center">
     <br>
-<form action="{% url 'Core:password_reset' %}" method="POST">{% csrf_token %}
+<form action="{% url 'password_reset' %}" method="POST">{% csrf_token %}
 
     {{form}}
 
