--- a/Core/templates/shared.html
+++ b/Core/templates/shared.html
@@ -36,13 +36,17 @@
             font-size: 2.5rem;
             margin-bottom: 20px;
         }
+        .imagem{
+            height: auto;
+            width: auto;
+        }
     </style>
 </head>
 <body>
-    <div class="container-fluid text-center mt-5 content">
+    <div class="container-fluid text-center content">
         {% if request.user.userprofile.foto %}
         <div>
-            <img src="{{request.user.userprofile.foto.url}}" alt="" sizes="" srcset="">
+            <img class="imagem" src="{{request.user.userprofile.foto.url}}" alt="{{request.user.userprofile.foto.url}}" sizes="" srcset="">
         </div>
         {% endif%}
         <h1><span style="color: {{ user.font_color }};">{{user.titulo}}</span></h1>
