--- a/Core/templates/profile.html
+++ b/Core/templates/profile.html
@@ -3,7 +3,7 @@
 {% block 'body' %}
 
     <div class="justify-content-center align-items-center" style="display: grid; margin-top: 15px;">
-        <div class="card text-center" style="width: 50rem; height: 25rem;">
+        <div class="card text-center" style="height: 25rem;">
         <h1>Personalize!</h1>
         <form method="post" enctype="multipart/form-data">
             <div id='message-upload' class="alert-primary"></div>
@@ -13,13 +13,22 @@
             <button type="submit" class="btn btn-primary">Salvar</button>
             <button onclick="copyLink()"  class="btn btn-success">Compartilhar</button>
         </form>
-    </div>
+        </div>
         <div class="container-fluid text-center mt-5 content">
             {% if request.user.userprofile.foto %}
             <div>
-                <img src="{{request.user.userprofile.foto.file.url}}" alt="" sizes="" srcset="">
+                {% if request.user.userprofile.foto.is_img %}
+                    <!-- Exibe a imagem -->
+                    <img src="{{ request.user.userprofile.foto.file.url }}" alt="Imagem do contador">
+                {% elif request.user.userprofile.foto.is_video %}
+                    <!-- Exibe o vídeo com controles de reprodução -->
+                    <video controls width="100%" height="100%">
+                        <source src="{{ request.user.userprofile.foto.file.url }}" type="video/mp4">
+                        Seu navegador não suporta a tag de vídeo.
+                    </video>
+                {% endif %}
             </div>
-            {% endif%}
+            {% endif %}
             <h1><span style="color: {{ request.user.userprofile.font_color }};">{{request.user.userprofile.titulo}}</h1>
             <div id="counter" class="counter" style="color: {{ request.user.userprofile.font_color }};">
             </div>
@@ -69,6 +78,9 @@
 
         font-family: Arial, sans-serif;
         background-color: {{ request.user.userprofile.background_color }};
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
     }
 
     /* Centraliza todo o conteúdo */
